--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -124,8 +124,7 @@
                                     </ul>
                                 </li>
                             </ul>
-                            <li class="greennature-donate-button"><button type="button" id="modalBtn" class="btn-donate">Donate</button>
-                                </a>
+                            <li href="donate.html" class="greennature-donate-button"><button onclick="location.href='donate.html'" type="button" id="modalBtn" class="btn-donate">Donate</button>
                         </nav>
                         <div class="greennature-navigation-gimmick" id="greennature-navigation-gimmick"></div>
                         <div class="clear"></div>
@@ -250,7 +249,7 @@ color: #ecb338;" class="ms-layer ms-btn ms-btn-round ms-btn-n msp-preset-btn-159
 
         <!--sec3-->
         <section id="content-section-3">
-            <div class="greennature-parallax-wrapper greennature-background-image gdlr-show-all no-skin" id="greennature-parallax-wrapper-1" data-bgspeed="0.11" style="background-image: url('../static/images/shutterstock_147266159-1024x605.jpg'); padding-top: 90px; padding-bottom: 65px; background-position: center; background-size: cover;">
+            <div class="greennature-parallax-wrapper greennature-background-image gdlr-show-all no-skin" id="greennature-parallax-wrapper-1" data-bgspeed="0.11" style="background-image: url('../static/images/service-bg.jpg'); padding-top: 90px; padding-bottom: 65px; background-position: center; background-size: cover;">
                 <div class="container">
                     <div class="six columns">
                         <div class="greennature-item greennature-action-ads-item" style="background: url('../static/images/sad-boy.jpg'); background-size: cover;
