--- a/src/static/css/my-own.css
+++ b/src/static/css/my-own.css
@@ -606,4 +606,11 @@ text-decoration: none;
 	border-radius: 5px;
 }
 
+.alert{
+    text-align: center !important; 
+    margin-top: 1rem !important;
+    margin-right: 1rem !important;
+    margin-left: 1rem !important;
+}
+
 
