--- a/src/templates/registerseed.html
+++ b/src/templates/registerseed.html
@@ -57,6 +57,18 @@
                         </div>
                         <div class="clear"></div>
                     </section>
+
+                    
+                    {% with messages = get_flashed_messages(with_categories=true) %}
+                        {% if messages %}
+                            {% for category, message in messages %}
+                                <div class="alert alert-{{ category }}">
+                                    {{ message }}
+                                </div>        
+                            {% endfor %}
+                        {% endif %}
+                    {% endwith %}
+                    
                     {{ render_formseed(render) }}
 
                 </div>
