--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -521,6 +521,8 @@
 
 
 
+
+
 {% macro render_sponsors(render) %}
 <!--sponsors-->
 <section id="sponsors">
@@ -950,10 +952,14 @@
                         <input name="bvn" type="number" class="form-control" id="bvn">
                     </div>
 
-                    <div class="custom-file">
-                        <input type="file" class="custom-file-input" id="customFile">
-                        <label class="custom-file-label" for="customFile">Upload Image</label>
-                      </div>
+                    <div class="form-group col-md-3">
+                        <br>
+                        
+                        <div class="custom-file">
+                            <input type="file" class="custom-file-input" id="customFile">
+                            <label class="custom-file-label" for="customFile">Upload Image</label>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="form-group col-md-3">
@@ -1097,7 +1103,7 @@
                         <input name="bvn" type="number" class="form-control" id="bvn">
                     </div>
 
-                    <div class="custom-file">
+                    <div class="custom-file col-md-3">
                         <input type="file" class="custom-file-input" id="customFile">
                         <label class="custom-file-label" for="customFile">Upload Image</label>
                       </div>
