--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -96,7 +96,7 @@
                                     </ul>
                                 </li>
 
-                                <li class="menu-item menu-item-home current-menu-item page_item page-item-5680 current_page_item donatelink"><a href="donate.html" aria-current="page">Donate Now</a></li>
+                                <li class="menu-item menu-item-home current-menu-item page_item page-item-5680 current_page_item donatelink"><a href="https://paystack.com/pay/donateaseed" aria-current="page">Donate Now</a></li>
                             </ul>
                         </div>
                     </div>
@@ -124,7 +124,7 @@
                                     </ul>
                                 </li>
                             </ul>
-                            <li href="donate.html" class="greennature-donate-button"><button onclick="location.href='donate.html'" type="button" id="modalBtn" class="btn-donate">Donate</button>
+                            <li href="https://paystack.com/pay/donateaseed" class="greennature-donate-button"><button onclick="location.href='https://paystack.com/pay/donateaseed'" type="button" id="modalBtn" class="btn-donate">Donate</button>
                         </nav>
                         <div class="greennature-navigation-gimmick" id="greennature-navigation-gimmick"></div>
                         <div class="clear"></div>
@@ -179,10 +179,10 @@ color: #ecb338;" class="ms-layer ms-btn ms-btn-round ms-btn-n msp-preset-btn-159
                                 <img src="{{ url_for('static', filename='plugins/masterslider/public/assets/css/blank.gif')}}" alt="" title="" data-src="{{ url_for('static', filename='images/dem-look.jpg')}}" />
 
                                 <div class="ms-layer  msp-cn-1-10" style="" data-effect="t(true,n,n,-500,n,n,n,n,n,n,n,n,n,n,n)" data-duration="425" data-delay="425" data-ease="easeOutQuint" data-offset-x="0" data-offset-y="82" data-origin="mc" data-position="normal">
-                                    According to this measure, 226.7 million people are starving in Africa. The countries most affected by extreme poverty and hunger in Africa are mainly those located south of the Sahara. One in four people suffers from hunger there – which means that the share of the world's hungry is highest in sub-Saharan Africa.</div>
+                                    THIS WORLD A BETTER PLACE</div>
 
                                 <div class="ms-layer  msp-cn-1-13" style="" data-effect="t(true,n,n,500,n,n,n,n,n,n,n,n,n,n,n)" data-duration="437" data-ease="easeOutQuint" data-offset-x="0" data-offset-y="-15" data-origin="mc" data-position="normal">
-                                    Make This World</div>
+                                    TOGETHER WE CAN MAKE</div>
                             </div>
                         </div>
                         <!-- END MasterSlider Main -->
@@ -222,7 +222,7 @@ color: #ecb338;" class="ms-layer ms-btn ms-btn-round ms-btn-n msp-preset-btn-159
                                     <div class="column-service-content greennature-skin-content">
                                         <p>With more than a quarter of a billion people potentially at the brink of starvation, swift action needs to be taken to provide food and humanitarian relief to the most at-risk regions.</p>
                                         <br>
-                                    </div><a class="column-service-read-more" href="donate.html" target="_blank">Donate Now</a>
+                                    </div><a class="column-service-read-more" href="https://paystack.com/pay/donateaseed" target="_blank">Donate Now</a>
                                 </div>
                             </div>
                         </div>
@@ -260,7 +260,7 @@ background-position: center; ">
                             <div class="action-ads-content">
                                 <p>After decades of steady decline, the number of people who suffer from hunger – as measured by the prevalence of undernourishment – began to slowly increase again in 2015. Today, more than 820 million people regularly go to bed hungry, of whom about 135 million suffer from acute hunger largely due to man-made conflicts, climate change and economic downturns. The COVID-19 pandemic could now double that number, putting an additional 130 million people at risk of suffering acute hunger by the end of 2020, according to the World Food Programme...
                                     <a href="https://www.un.org/sustainabledevelopment/hunger/">Learn More &raquo;</a></p>
-                                <a href="donate.html" class="action-ads-button large greennature-button greennature-lb-payment" style="color: #6d5b1c;background-color: #fec428;">Donate Now</a>
+                                <a href="https://paystack.com/pay/donateaseed" class="action-ads-button large greennature-button greennature-lb-payment" style="color: #6d5b1c;background-color: #fec428;">Donate Now</a>
                             </div>
                         </div>
                     </div>
